# chess-vision

./: .env.example  .gitignore  CLAUDE.md  README.md  corner-capture-mode.md  plan.md  predict.py  pyproject.toml
.github/workflows/: pages.yml
chessvision/: __init__.py  capture_eval.py  cli.py  corner_regressor.py  detector.py  geometry.py  inference.py  keypoint_detector.py  keypoint_eval.py  lattice.py  rtdetr.py  rtdetr_keypoint.py  selfcheck.py  yolo_keypoint.py
chessvision/capture/: __init__.py  __main__.py  app.py  games.py
chessvision/capture/samples/: opera_game.pgn
chessvision/capture/static/: capture.html  corners.html  cv.js  index.html  live.html  positions.html  sessions.html  validate.html
chessvision/data/: __init__.py  blob.py  capture_detection.py  captures.py  chessred.py  contact.py  corner_capture.py  corners.py  detection.py  label_qc.py  labelstudio.py  labelstudio_api.py  positions.py  publish.py  session_meta.py  storage.py  synthetic_sets.py  yolo_export.py  yolo_pose_export.py
docs/: corner-capture-mode.md  piece-detection.md
scripts/: _validate_geometry.mjs  analyze_center_square_crop.py  backfill_corner_exif_sessions.py  backfill_corner_sets.py  build_blur_review.py  build_occlusion_tasks.py  cc_corner_disagreement.py  check_capture_labels.py  check_homography.py  check_labels_vs_game.py  decode_rtdetr_keypoint.py  diag_pose_onnx.py  eval_board_exact_chessred.py  eval_cds_per_board.py  eval_cell_assignment.py  eval_cell_dense.py  eval_corners_per_board.py  eval_detector_on_captures.py  eval_end_to_end_captures.py  eval_keypoint_head.py  eval_per_board_captures.py  eval_positions_per_board.py  eval_rtdetr_vs_detector.py  eval_yolo_pose_vs_keypoint.py  eval_yolo_vs_detector.py  export_onnx.py  finetune_keypoint_captures.py  ls_inspect.py  ls_patch_trial.py  migrate_captures_to_store.py  pretrain_keypoint.py  preview_capture_boxes.py  restructure_to_flat.py  save_capture_positions.py  scan_blur.py  sweep_corner_aug.sh  sweep_corner_norm.sh  sweep_lattice.sh  sweep_resolution.sh  sweep_seeds.sh  (+12 more)
tests/: test_capture.py  test_capture_detection.py  test_captures.py  test_chessred.py  test_cli.py  test_contact.py  test_corner_capture.py  test_corners.py  test_detection.py  test_geometry.py  test_inference.py  test_keypoint_detector.py  test_label_qc.py  test_labelstudio.py  test_lattice.py  test_publish.py  test_rtdetr.py  test_session_meta.py
web/: app.js  geometry.js  index.html
