[project]
name = "chessvision"
version = "0.1.0"
description = "Read a chess position from a photo and output FEN, generalizing across boards, piece sets, and environments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Wouter de Vries" }]

# Pins use upper bounds on volatile deps (see plan.md §8). Exact versions are
# locked in uv.lock; the bounds here guard against breaking majors:
#   - numpy<2  : NumPy 2.x breaks against the OpenCV builds we use (keep this even
#                though a manual `uv pip install torch` will try to pull numpy 2).
#   - torch/torchvision come from the CUDA (cu128) index, see [tool.uv.sources]
#     below; the resolver keeps them a compatible pair.
dependencies = [
    "azure-storage-blob>=12.30.0",
    "boto3>=1.43.14,<2",
    "chess>=1.10,<2",
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "numpy>=1.26,<2",
    "opencv-python>=4.9,<4.12",
    "pillow>=10.3,<12",
    "pycocotools>=2.0,<3",
    "python-dotenv>=1.2.2,<2",
    "python-multipart>=0.0.9,<1",
    "torch>=2.8,<2.12",
    "torchmetrics>=1.4,<2",
    "torchvision>=0.23,<0.27",
    "uvicorn[standard]>=0.27,<1",
]

[project.scripts]
chessvision = "chessvision.cli:main"

# Pull torch/torchvision from PyTorch's CUDA (cu128) wheel index so `uv run`
# keeps the GPU build in the lock. Without this, the lock would resolve the
# default CPU wheels from PyPI and every `uv run` would silently revert a
# manually-installed CUDA torch back to CPU. `explicit = true` means *only* the
# packages mapped in [tool.uv.sources] are taken from this index.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# cu128 wheels exist only for Windows and Linux (no macOS). Restrict the lock to
# those platforms so the universal resolver doesn't fail hunting a macOS CUDA wheel.
[tool.uv]
environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=8.2,<9",
    "ruff>=0.6,<0.13",
]
rtdetr = [
    "transformers>=4.52,<6",
]
yolo = [
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxslim>=0.1.94",
    "ultralytics>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chessvision"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
